--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,32 @@
 [project]
-name = "tactics-training"
-version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-authors = [
-    { name = "=", email = "=" }
+dependencies   =[
+    "duckdb>=1.4.3",
+    "fastapi>=0.128.0",
+    "python-chess>=1.999",
+    "python-dotenv>=1.2.1",
 ]
-requires-python = ">=3.13"
-dependencies = []
+description    ="Add your description here"
+name           ="tactix"
+readme         ="README.md"
+requires-python=">=3.13"
+version        ="0.1.0"
 
-[project.scripts]
-tactics-training = "tactics_training:main"
+    [project.scripts]
+    tactix="tactix:main"
+
+[tool.maturin]
+module-name    ="tactix._core"
+python-packages=["tactix"]
+python-source  ="src"
+
+[tool.uv]
+cache-keys=[
+    { file="Cargo.lock" },
+    { file="Cargo.toml" },
+    { file="pyproject.toml" },
+    { file="src/**/*.rs" },
+]
 
 [build-system]
-requires = ["uv_build>=0.9.21,<0.10.0"]
-build-backend = "uv_build"
+build-backend="maturin"
+requires     =["maturin>=1.0,<2.0"]
