--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chess.js": "^1.4.0",
     "react": "^18.3.1",
+    "react-chessboard": "^4.7.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
