--- a/client/package.json
+++ b/client/package.json
@@ -9,21 +9,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/react": "^16.3.2",
+    "@types/jest": "^30.0.0",
+    "@types/mocha": "^10.0.10",
     "axios": "^1.7.7",
     "chess.js": "^1.4.0",
+    "jest": "^30.2.0",
     "react": "^18.3.1",
     "react-chessboard": "^4.7.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vitest": "^4.0.18"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
     "postcss": "^8.4.47",
     "puppeteer": "^24.36.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.23.0",
     "vite": "^5.4.10"
   }
 }
