--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,4 +44,9 @@ build-backend="maturin"
 requires     =["maturin>=1.0,<2.0"]
 
 [dependency-groups]
-dev=["pytest>=9.0.2"]
+dev=[
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.14.14",
+    "ty>=0.0.13",
+]
