--- a/compose.yml
+++ b/compose.yml
@@ -17,6 +17,7 @@ services:
       - '8000:8000'
     networks:
       - tactix-net
+    restart: unless-stopped
 
   client:
     build:
@@ -34,6 +35,7 @@ services:
       - server
     networks:
       - tactix-net
+    restart: unless-stopped
 
   airflow-init:
     build:
@@ -65,6 +67,7 @@ services:
       --email $${_AIRFLOW_WWW_USER_EMAIL}"
     networks:
       - tactix-net
+    restart: unless-stopped
 
   airflow-webserver:
     build:
@@ -87,6 +90,7 @@ services:
     command: airflow webserver
     networks:
       - tactix-net
+    restart: unless-stopped
 
   airflow-scheduler:
     build:
@@ -107,6 +111,7 @@ services:
     command: airflow scheduler
     networks:
       - tactix-net
+    restart: unless-stopped
 
 networks:
   tactix-net:
