[dev]Verify features 001-003 and fix Airflow local config
- Switched Airflow local executor to SequentialExecutor and moved SQLite DB to shared data volume
- Added TACTIX_SOURCE env wiring for Airflow services
- Regression verification for features 001-003 via UI DAG triggers and dashboard checks
- Screenshots: verification/feature-001-airflow-lichess-rapid-2026-01-27.png, verification/feature-001-dashboard-lichess-rapid-2026-01-27.png, verification/feature-002-airflow-chesscom-blitz-2026-01-27.png, verification/feature-002-dashboard-chesscom-blitz-2026-01-27.png, verification/feature-003-lichess-incremental-log-2026-01-27.png, verification/regression-001-lichess-2026-01-27.png, verification/regression-002-chesscom-blitz-2026-01-27.png, verification/regression-003-lichess-since-2026-01-27.png

--- a/compose.yml
+++ b/compose.yml
@@ -42,9 +42,10 @@ services:
       context: .
       dockerfile: docker/airflow.Dockerfile
     environment:
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/airflow.db
+      AIRFLOW__CORE__EXECUTOR: SequentialExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/data/airflow.db
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
+      TACTIX_SOURCE: ${TACTIX_SOURCE:-lichess}
       _AIRFLOW_WWW_USER_USERNAME: admin
       _AIRFLOW_WWW_USER_PASSWORD: admin
       _AIRFLOW_WWW_USER_EMAIL: admin@example.com
@@ -74,9 +75,10 @@ services:
       context: .
       dockerfile: docker/airflow.Dockerfile
     environment:
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/airflow.db
+      AIRFLOW__CORE__EXECUTOR: SequentialExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/data/airflow.db
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
+      TACTIX_SOURCE: ${TACTIX_SOURCE:-lichess}
       TACTIX_DATA_DIR: /opt/airflow/data
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
@@ -97,9 +99,10 @@ services:
       context: .
       dockerfile: docker/airflow.Dockerfile
     environment:
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/airflow.db
+      AIRFLOW__CORE__EXECUTOR: SequentialExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/data/airflow.db
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
+      TACTIX_SOURCE: ${TACTIX_SOURCE:-lichess}
       TACTIX_DATA_DIR: /opt/airflow/data
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
