--- a/compose.yml
+++ b/compose.yml
@@ -12,6 +12,13 @@ services:
       TACTIX_AIRFLOW_USERNAME: admin
       TACTIX_AIRFLOW_PASSWORD: admin
       TACTIX_DATA_DIR: /app/data
+      TACTIX_POSTGRES_HOST: postgres
+      TACTIX_POSTGRES_PORT: '5432'
+      TACTIX_POSTGRES_DB: tactix
+      TACTIX_POSTGRES_USER: tactix
+      TACTIX_POSTGRES_PASSWORD: tactix
+      TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_RUN_CONTEXT: api
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
       - ./:/app
@@ -22,6 +29,8 @@ services:
     networks:
       - tactix-net
     restart: unless-stopped
+    depends_on:
+      - postgres
 
   client:
     build:
@@ -51,6 +60,13 @@ services:
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
       AIRFLOW__API__AUTH_BACKENDS: airflow.api.auth.backend.basic_auth
       TACTIX_SOURCE: ${TACTIX_SOURCE:-lichess}
+      TACTIX_POSTGRES_HOST: postgres
+      TACTIX_POSTGRES_PORT: '5432'
+      TACTIX_POSTGRES_DB: tactix
+      TACTIX_POSTGRES_USER: tactix
+      TACTIX_POSTGRES_PASSWORD: tactix
+      TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_RUN_CONTEXT: airflow
       _AIRFLOW_WWW_USER_USERNAME: admin
       _AIRFLOW_WWW_USER_PASSWORD: admin
       _AIRFLOW_WWW_USER_EMAIL: admin@example.com
@@ -74,6 +90,8 @@ services:
     networks:
       - tactix-net
     restart: unless-stopped
+    depends_on:
+      - postgres
 
   airflow-webserver:
     build:
@@ -86,6 +104,13 @@ services:
       AIRFLOW__API__AUTH_BACKENDS: airflow.api.auth.backend.basic_auth
       TACTIX_SOURCE: ${TACTIX_SOURCE:-lichess}
       TACTIX_DATA_DIR: /opt/airflow/data
+      TACTIX_POSTGRES_HOST: postgres
+      TACTIX_POSTGRES_PORT: '5432'
+      TACTIX_POSTGRES_DB: tactix
+      TACTIX_POSTGRES_USER: tactix
+      TACTIX_POSTGRES_PASSWORD: tactix
+      TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_RUN_CONTEXT: airflow
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
       - ./airflow/dags:/opt/airflow/dags
@@ -95,6 +120,7 @@ services:
       - '8080:8080'
     depends_on:
       - airflow-init
+      - postgres
     command: airflow webserver
     networks:
       - tactix-net
@@ -111,6 +137,13 @@ services:
       AIRFLOW__API__AUTH_BACKENDS: airflow.api.auth.backend.basic_auth
       TACTIX_SOURCE: ${TACTIX_SOURCE:-lichess}
       TACTIX_DATA_DIR: /opt/airflow/data
+      TACTIX_POSTGRES_HOST: postgres
+      TACTIX_POSTGRES_PORT: '5432'
+      TACTIX_POSTGRES_DB: tactix
+      TACTIX_POSTGRES_USER: tactix
+      TACTIX_POSTGRES_PASSWORD: tactix
+      TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_RUN_CONTEXT: airflow
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
       - ./airflow/dags:/opt/airflow/dags
@@ -118,7 +151,22 @@ services:
       - ./tmp-logs:/opt/airflow/tmp-logs
     depends_on:
       - airflow-init
+      - postgres
     command: airflow scheduler
+    networks:
+      - tactix-net
+    restart: unless-stopped
+
+  postgres:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_DB: tactix
+      POSTGRES_USER: tactix
+      POSTGRES_PASSWORD: tactix
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - '5432:5432'
     networks:
       - tactix-net
     restart: unless-stopped
@@ -126,3 +174,6 @@ services:
 networks:
   tactix-net:
     driver: bridge
+
+volumes:
+  postgres_data:
