--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -12,6 +12,13 @@ services:
       TACTIX_AIRFLOW_USERNAME: admin
       TACTIX_AIRFLOW_PASSWORD: admin
       TACTIX_DATA_DIR: /app/data
+      TACTIX_POSTGRES_HOST: postgres
+      TACTIX_POSTGRES_PORT: '5432'
+      TACTIX_POSTGRES_DB: tactix
+      TACTIX_POSTGRES_USER: tactix
+      TACTIX_POSTGRES_PASSWORD: tactix
+      TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_RUN_CONTEXT: api
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
       - ../:/app
@@ -21,6 +28,8 @@ services:
       - '8000:8000'
     networks:
       - tactix-net
+    depends_on:
+      - postgres
 
   client:
     build:
@@ -54,6 +63,13 @@ services:
       _AIRFLOW_WWW_USER_FIRSTNAME: Admin
       _AIRFLOW_WWW_USER_LASTNAME: User
       TACTIX_DATA_DIR: /opt/airflow/data
+      TACTIX_POSTGRES_HOST: postgres
+      TACTIX_POSTGRES_PORT: '5432'
+      TACTIX_POSTGRES_DB: tactix
+      TACTIX_POSTGRES_USER: tactix
+      TACTIX_POSTGRES_PASSWORD: tactix
+      TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_RUN_CONTEXT: airflow
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
       - ../airflow/dags:/opt/airflow/dags
@@ -71,6 +87,8 @@ services:
       --email $${_AIRFLOW_WWW_USER_EMAIL}"
     networks:
       - tactix-net
+    depends_on:
+      - postgres
 
   airflow-webserver:
     build:
@@ -82,6 +100,13 @@ services:
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
       AIRFLOW__API__AUTH_BACKENDS: airflow.api.auth.backend.basic_auth
       TACTIX_DATA_DIR: /opt/airflow/data
+      TACTIX_POSTGRES_HOST: postgres
+      TACTIX_POSTGRES_PORT: '5432'
+      TACTIX_POSTGRES_DB: tactix
+      TACTIX_POSTGRES_USER: tactix
+      TACTIX_POSTGRES_PASSWORD: tactix
+      TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_RUN_CONTEXT: airflow
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
       - ../airflow/dags:/opt/airflow/dags
@@ -92,6 +117,7 @@ services:
       - '8080:8080'
     depends_on:
       - airflow-init
+      - postgres
     command: airflow webserver
     networks:
       - tactix-net
@@ -106,6 +132,13 @@ services:
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
       AIRFLOW__API__AUTH_BACKENDS: airflow.api.auth.backend.basic_auth
       TACTIX_DATA_DIR: /opt/airflow/data
+      TACTIX_POSTGRES_HOST: postgres
+      TACTIX_POSTGRES_PORT: '5432'
+      TACTIX_POSTGRES_DB: tactix
+      TACTIX_POSTGRES_USER: tactix
+      TACTIX_POSTGRES_PASSWORD: tactix
+      TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_RUN_CONTEXT: airflow
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
       - ../airflow/dags:/opt/airflow/dags
@@ -114,10 +147,27 @@ services:
       - ../tmp-logs:/opt/airflow/tmp-logs
     depends_on:
       - airflow-init
+      - postgres
     command: airflow scheduler
+    networks:
+      - tactix-net
+
+  postgres:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_DB: tactix
+      POSTGRES_USER: tactix
+      POSTGRES_PASSWORD: tactix
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - '5432:5432'
     networks:
       - tactix-net
 
 networks:
   tactix-net:
     driver: bridge
+
+volumes:
+  postgres_data:
