--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies=[
     "fastapi>=0.115.0",
     "orjson>=3.10.7",
     "pandas>=2.2.3",
+    "psycopg2-binary>=2.9.9",
     "pydantic>=2.9.0",
     "python-chess>=1.999",
     "python-dotenv>=1.2.1",
@@ -44,9 +45,4 @@ build-backend="maturin"
 requires     =["maturin>=1.0,<2.0"]
 
 [dependency-groups]
-dev=[
-    "pytest>=9.0.2",
-    "pytest-cov>=7.0.0",
-    "ruff>=0.14.14",
-    "ty>=0.0.13",
-]
+dev=["pytest-cov>=7.0.0", "pytest>=9.0.2", "ruff>=0.14.14", "ty>=0.0.13"]
