[dev]Implement feature 117 Airflow Postgres metadata - verified end-to-end
- Switched Airflow metadata DB to Postgres in compose configs and airflow.cfg

- Added metadata config tests and integration checks

- Verified via UI automation and Postgres metadata tables

- Updated feature_list.json and progress notes

--- a/compose.yml
+++ b/compose.yml
@@ -56,7 +56,7 @@ services:
       dockerfile: docker/airflow.Dockerfile
     environment:
       AIRFLOW__CORE__EXECUTOR: SequentialExecutor
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/data/airflow.db
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://tactix:tactix@postgres:5432/tactix
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
       AIRFLOW__API__AUTH_BACKENDS: airflow.api.auth.backend.basic_auth
       TACTIX_SOURCE: ${TACTIX_SOURCE:-lichess}
@@ -99,7 +99,7 @@ services:
       dockerfile: docker/airflow.Dockerfile
     environment:
       AIRFLOW__CORE__EXECUTOR: SequentialExecutor
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/data/airflow.db
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://tactix:tactix@postgres:5432/tactix
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
       AIRFLOW__API__AUTH_BACKENDS: airflow.api.auth.backend.basic_auth
       TACTIX_SOURCE: ${TACTIX_SOURCE:-lichess}
@@ -132,7 +132,7 @@ services:
       dockerfile: docker/airflow.Dockerfile
     environment:
       AIRFLOW__CORE__EXECUTOR: SequentialExecutor
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: sqlite:////opt/airflow/data/airflow.db
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://tactix:tactix@postgres:5432/tactix
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
       AIRFLOW__API__AUTH_BACKENDS: airflow.api.auth.backend.basic_auth
       TACTIX_SOURCE: ${TACTIX_SOURCE:-lichess}
