--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -18,6 +18,7 @@ services:
       TACTIX_POSTGRES_USER: tactix
       TACTIX_POSTGRES_PASSWORD: tactix
       TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_POSTGRES_ANALYSIS_ENABLED: '1'
       TACTIX_RUN_CONTEXT: api
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
@@ -69,6 +70,7 @@ services:
       TACTIX_POSTGRES_USER: tactix
       TACTIX_POSTGRES_PASSWORD: tactix
       TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_POSTGRES_ANALYSIS_ENABLED: '1'
       TACTIX_RUN_CONTEXT: airflow
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
@@ -105,6 +107,7 @@ services:
       TACTIX_POSTGRES_USER: tactix
       TACTIX_POSTGRES_PASSWORD: tactix
       TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_POSTGRES_ANALYSIS_ENABLED: '1'
       TACTIX_RUN_CONTEXT: airflow
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
@@ -136,6 +139,7 @@ services:
       TACTIX_POSTGRES_USER: tactix
       TACTIX_POSTGRES_PASSWORD: tactix
       TACTIX_POSTGRES_SSLMODE: disable
+      TACTIX_POSTGRES_ANALYSIS_ENABLED: '1'
       TACTIX_RUN_CONTEXT: airflow
       STOCKFISH_PATH: /usr/games/stockfish
     volumes:
