--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "pg:smoke": "tsx verification/pg_smoke.ts"
   },
   "dependencies": {
     "@testing-library/react": "^16.3.2",
@@ -35,9 +36,11 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^27.4.0",
+    "pg": "^8.12.0",
     "postcss": "^8.4.47",
     "puppeteer": "^24.36.0",
     "tailwindcss": "^3.4.13",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.23.0",
     "vite": "^5.4.10"
