--- a/compose.yml
+++ b/compose.yml
@@ -175,9 +175,27 @@ services:
       - tactix-net
     restart: unless-stopped
 
+  pgadmin:
+    image: dpage/pgadmin4:8.13
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@tactix.io
+      PGADMIN_DEFAULT_PASSWORD: tactix
+      PGADMIN_SERVER_JSON_FILE: /pgadmin4/servers.json
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+      - ./docker/pgadmin/servers.json:/pgadmin4/servers.json:ro
+    ports:
+      - '5050:80'
+    depends_on:
+      - postgres
+    networks:
+      - tactix-net
+    restart: unless-stopped
+
 networks:
   tactix-net:
     driver: bridge
 
 volumes:
   postgres_data:
+  pgadmin_data:
