--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -166,9 +166,26 @@ services:
     networks:
       - tactix-net
 
+  pgadmin:
+    image: dpage/pgadmin4:8.13
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@tactix.io
+      PGADMIN_DEFAULT_PASSWORD: tactix
+      PGADMIN_SERVER_JSON_FILE: /pgadmin4/servers.json
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+      - ../docker/pgadmin/servers.json:/pgadmin4/servers.json:ro
+    ports:
+      - '5050:80'
+    depends_on:
+      - postgres
+    networks:
+      - tactix-net
+
 networks:
   tactix-net:
     driver: bridge
 
 volumes:
   postgres_data:
+  pgadmin_data:
