--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "pg:smoke": "tsx verification/pg_smoke.ts"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@testing-library/react": "^16.3.2",
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
