--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@tanstack/react-table": "^8.21.3",
     "@testing-library/react": "^16.3.2",
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
