--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,4 +45,11 @@ build-backend="maturin"
 requires     =["maturin>=1.0,<2.0"]
 
 [dependency-groups]
-dev=["pytest-cov>=7.0.0", "pytest>=9.0.2", "ruff>=0.14.14", "ty>=0.0.13"]
+dev=[
+    "pytest-cov>=7.0.0",
+    "pytest>=9.0.2",
+    "ruff>=0.14.14",
+    "ty>=0.0.13",
+    "vulture>=2.14",
+    "xenon>=0.9.3",
+]
