--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,9 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "jscpd": "^4.0.8",
     "jsdom": "^27.4.0",
+    "knip": "^5.82.1",
     "pg": "^8.12.0",
     "postcss": "^8.4.47",
     "puppeteer": "^24.36.0",
