--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
     "composite": true,
-    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "Bundler"
   },
   "include": ["vite.config.ts"]
 }
