--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,34 @@ dev=[
     "xenon>=0.9.3",
 ]
 
+[tool.pylint]
+disable=[
+    "C0103", # invalid-name
+    "C0114", # missing-module-docstring
+    "C0115", # missing-class-docstring
+    "C0116", # missing-function-docstring
+    "C0302", # too-many-lines
+    "C0415", # import-outside-toplevel
+    "E0601", # used-before-assignment
+    "E0611", # no-name-in-module
+    "R0401", # cyclic-import
+    "R0902", # too-many-instance-attributes
+    "R0903", # too-few-public-methods
+    "R0913", # too-many-arguments
+    "R0914", # too-many-locals
+    "R0917", # too-many-positional-arguments
+    "R0801", # duplicate-code
+    "W0212", # protected-access
+    "W0401", # wildcard-import
+    "W0511", # fixme
+    "W0613", # unused-argument
+    "W0614", # unused-wildcard-import
+    "W0622", # redefined-builtin
+    "W0718", # broad-exception-caught
+    "W1203", # logging-fstring-interpolation
+]
+max-line-length=100
+
 [tool.ruff]
 extend-exclude=[".venv", "build", "client", "dist"]
 line-length   =100
