--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,10 @@ dev=[
     "xenon>=0.9.3",
 ]
 
-[tool.pylint]
+[tool.pylint.main]
+max-line-length=100
+
+[tool.pylint.messages_control]
 disable=[
     "C0103", # invalid-name
     "C0114", # missing-module-docstring
@@ -91,7 +94,6 @@ disable=[
     "W0718", # broad-exception-caught
     "W1203", # logging-fstring-interpolation
 ]
-max-line-length=100
 
 [tool.ruff]
 extend-exclude=[".venv", "build", "client", "dist"]
