--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ dev=[
     "ruff>=0.14.14",
     "safety>=3.7.0",
     "ty>=0.0.13",
+    "types-requests>=2.32.4.20260107",
     "vulture>=2.14",
     "xenon>=0.9.3",
 ]
