--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,27 @@ requires     =["maturin>=1.0,<2.0"]
 dev=[
     "bandit>=1.9.3",
     "dodgy>=0.2.1",
+    "flake8-annotations-complexity>=0.1.0",
+    "flake8-assertive>=2.2.0",
+    "flake8-bandit>=4.1.1",
     "flake8-bugbear>=25.11.29",
+    "flake8-class-attributes-order>=0.3.0",
+    "flake8-cognitive-complexity>=0.1.0",
+    "flake8-comprehensions>=3.17.0",
+    "flake8-docstrings>=1.7.0",
+    "flake8-expression-complexity>=0.0.11",
+    "flake8-fastapi>=0.7.0",
+    "flake8-functions>=0.0.8",
+    "flake8-json>=24.4.0",
+    "flake8-length>=0.3.1",
+    "flake8-markdown>=0.6.0",
+    "flake8-picky-parentheses>=0.6.2",
+    "flake8-pyi>=25.5.0",
+    "flake8-quotes>=3.4.0",
+    "flake8-return>=1.2.0",
+    "flake8-rst-docstrings>=0.4.0",
+    "flake8-simplify>=0.30.0",
+    "flake8-sql>=0.4.1",
     "flake8>=7.3.0",
     "mypy>=1.19.1",
     "pre-commit>=4.5.0",
