--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,6 @@ dev=[
     "flake8-return>=1.2.0",
     "flake8-rst-docstrings>=0.4.0",
     "flake8-simplify>=0.30.0",
-    "flake8-sql>=0.4.1",
     "flake8>=7.3.0",
     "mypy>=1.19.1",
     "pre-commit>=4.5.0",
@@ -88,9 +87,49 @@ dev=[
 [tool.pylint.main]
 max-line-length=100
 
+[tool.pylint."messages control"]
+disable="C0103,C0114,C0115,C0116,C0302,R0801,R0914,W0718"
+
+[tool.pydocstyle]
+ignore=[
+    "D100", # Missing docstring in public module
+    "D101", # Missing docstring in public class
+    "D102", # Missing docstring in public method
+    "D103", # Missing docstring in public function
+    "D104", # Missing docstring in public package
+    "D105", # Missing docstring in magic method
+    "D106", # Missing docstring in public nested class
+    "D107", # Missing docstring in __init__
+    "D202", # No blank lines allowed after function docstring
+    "D203", # 1 blank line required before class docstring
+    "D205", # 1 blank line required between summary line and description
+    "D212", # Multi-line docstring summary should start at the first line
+    "D213", # Multi-line docstring summary should start at the second line
+    "D300", # Use triple double quotes
+    "D400", # First line should end with a period
+    "D401", # First line should be in imperative mood
+    "D403", # First word should be properly capitalized
+    "D406", # Section name should end with a newline
+    "D407", # Missing dashed underline after section
+    "D413", # Missing blank line after last section
+    "D415", # First line should end with a period, question mark, or exclamation
+    "D417", # Missing argument descriptions
+]
+
 
 [tool.mypy]
 python_version="3.12"
+ignore_missing_imports=true
+disable_error_code=[
+    "arg-type",
+    "attr-defined",
+    "call-overload",
+    "import-untyped",
+    "operator",
+    "override",
+    "typeddict-item",
+    "valid-type",
+]
 
 
 [tool.ruff]
