--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ airflow/logs/
 client/package-lock.json
 client/coverage/
 client/node_modules/
-tmp-logs/vite.log
+tmp-logs/
 tmp-logs/uvicorn.log
 tmp-logs/vite-5173.log
 tmp-logs/debug_failed_attempts*.py
@@ -36,3 +36,6 @@ verification/puppeteer_feature_189_*.js
 .mypy_cache/
 .pytest_cache/
 .ruff_cache/
+
+# Any folders beginning with "tmp"
+tmp*/
