--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ dependencies=[
     "berserk>=0.13.0",
     "duckdb>=1.4.3",
     "fastapi>=0.115.0",
+    "fsrs>=6.3.0",
     "orjson>=3.10.7",
     "pandas>=2.2.3",
     "psycopg2-binary>=2.9.9",
